# spectrum.azure.package

./: LICENSE  Pipfile  README.md  pyproject.toml
spectrum.azure/: Pipfile
